--- a/index.html
+++ b/index.html
@@ -5,22 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enkripsi & Dekripsi AES</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <h2>Enkripsi & Dekripsi AES</h2>
+      <h2>Enkripsi & Dekripsi</h2>
+      <h2>Algoritma Advanced Encryption Standard (AES)</h2>
       <div class="form-group">
         <label for="inputText">Masukkan Teks:</label>
         <textarea id="inputText" rows="4" cols="50"></textarea>
       </div>
       <div class="form-group">
+        <label for="passwordInput">Masukkan Kata Sandi:</label>
+        <input type="password" id="passwordInput" name="passwordInput" />
+
+        <!-- Tombol dengan kelas clear-button -->
+      </div>
+
+      <div class="form-group button-group">
+        <!-- Menambah kelas button-group -->
         <button onclick="encrypt()">Enkripsi</button>
         <button onclick="decrypt()">Dekripsi</button>
+        <!-- Tombol untuk mereset semua -->
       </div>
       <div class="form-group">
         <label for="outputText">Hasil:</label>
         <textarea id="outputText" rows="4" cols="50" readonly></textarea>
+      </div>
+      <div class="form-group reset-button">
+        <button onclick="resetAll()">Reset</button>
       </div>
     </div>
     <script src="script.js"></script>
