--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
         <textarea id="outputText" rows="4" cols="50" readonly></textarea>
       </div>
       <div class="form-group">
-        <label for="outputText">Hasil:</label>
-        <textarea id="outputText" rows="4" cols="50" readonly></textarea>
-        <p id="outputNote" class="note"></p>
-        <!-- Ini adalah keterangan -->
+        <label for="outputNote">Keterangan :</label>
+        <textarea id="outputNote" rows="4" cols="50" readonly></textarea>
       </div>
 
       <button id="resetButton" class="button">Reset</button>
